<resources>
    <string name="app_name">ZWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- login text   -->
    <string name="text_login">Login</string>
    <string name="text_login_desc">Login to your existing account to access all the features in Zwallet.</string>
    <string name="dont_have_an_account">Don\'t have an account? Let\'s \u0020</string>

    <!-- signup text   -->
    <string name="sign_up">Sign Up</string>
    <string name="text_signup_desc">Create your account to access Zwallet.</string>
    <string name="have_an_account">Have an account? Let\'s \u0020 </string>

    <!--    forgot password-->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_desc">Enter your Zwallet e-mail so we can send you a password reset link.</string>
    <string name="reset_btn">Confirm</string>
    <!-- Forms    -->
    <string name="hint_username">Enter your username</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_password">Enter your password</string>
    <string name="text_forgot_password">Forgot password?</string>

    <string name="slogans">Make easy your payment</string>

    <!--    profile-->
    <!--    menu-->
    <string name="personal_information">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change PIN</string>
    <string name="notification">Notification</string>
    <string name="text_logout">Logout</string>


    <!--    personal information-->
    <string name="personal_information_slogan">
        We got your personal information from the sign
        \nup process. If you want to make changes on
        \nyour information, contact our support.
    </string>
    <string name="formFirstName">First Name</string>
    <string name="formLastName">Last Name</string>
    <string name="verifiedEmail">Verified E-mail</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="title_activity_coba">CobaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_all">View All</string>


</resources>