<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_gravity="center"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">


        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="105dp"

            style="@style/TextView.SplashScreen"
            android:textColor="@color/primaryColor"
            android:gravity="center_horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerForm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_upper_rounded"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogo">

            <TextView
                android:id="@+id/textLogin"
                style="@style/TextView.Bold"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/text_login"
                android:textColor="#3A3D42"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textLoginDesc"
                style="@style/TextView.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_login_desc"
                android:textAlignment="center"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLogin" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLoginDesc" />

            <EditText
                android:id="@+id/inputPassword"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/hint_password"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputEmail" />

            <TextView
                android:id="@+id/textForgotPassword"
                style="@style/TextView.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="75dp"
                android:background="@drawable/background_button_rounded"
                android:paddingHorizontal="24dp"
                android:paddingVertical="15dp"
                android:text="@string/text_login"
                android:textAllCaps="false"
                android:textColor="#88888F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textForgotPassword" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/textDontHave"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textAlignment="textEnd"

                    android:text="@string/dont_have_an_account"
                    style="@style/TextView.Description"
                    android:textColor="@color/darkGreyColor" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/textSignUp"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textAlignment="viewStart"
                    android:text="@string/sign_up"
                    style="@style/TextView.Description"
                    android:textColor="@color/primaryColor"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>













