<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">


        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="105dp"

            style="@style/TextView.SplashScreen"
            android:textColor="@color/primaryColor"
            android:gravity="center_horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerForm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/background_upper_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogo">

            <TextView
                android:id="@+id/textLogin"
                style="@style/TextView.Bold.large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="#3A3D42"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textLoginDesc"
                style="@style/TextView.Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/reset_password_desc"
                android:textAlignment="center"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLogin" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/EditText.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLoginDesc" />





            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/background_button_rounded"
                android:paddingHorizontal="24dp"
                android:paddingVertical="15dp"
                android:text="@string/reset_btn"
                android:textAllCaps="false"
                android:textColor="#88888F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputEmail" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>