<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.layout.main.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/actionBar"
                    android:layout_width="match_parent"
                    android:paddingHorizontal="23dp"
                    android:paddingTop="20dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/backButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_arrow_back_24"/>

                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/sample"
            app:shapeAppearanceOverlay="@style/RoundCornerOverlay"
            app:layout_constraintTop_toBottomOf="@id/mainActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Edit"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            style="@style/TextView.small"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="Muhamad Rizki Septiawan"
            style="@style/TextView.Bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+62 1223 3333 22"
           style="@style/TextView.small"
            app:layout_constraintTop_toBottomOf="@id/profileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <LinearLayout
        android:id="@+id/profileMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toPersonalInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:paddingVertical="20dp"
            style="@style/TextView.Bold"
            android:textSize="16dp"
            android:textColor="@color/darkGreyMenu"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:paddingHorizontal="20dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:background="@drawable/background_rounded_white"
            android:layout_marginVertical="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:paddingVertical="20dp"
            style="@style/TextView.Bold"
            android:textSize="16dp"
            android:textColor="@color/darkGreyMenu"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:paddingHorizontal="20dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:background="@drawable/background_rounded_white"
            android:layout_marginVertical="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toChangePin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pin"
            android:paddingVertical="20dp"
            style="@style/TextView.Bold"
            android:textSize="16dp"
            android:textColor="@color/darkGreyMenu"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:paddingHorizontal="20dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:background="@drawable/background_rounded_white"
            android:layout_marginVertical="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:paddingVertical="20dp"
            style="@style/TextView.Bold"
            android:textSize="16dp"
            android:textColor="@color/darkGreyMenu"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:paddingHorizontal="20dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:background="@drawable/background_rounded_white"
            android:layout_marginVertical="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_logout"
            android:paddingVertical="20dp"
            style="@style/TextView.Bold"
            android:textSize="16dp"
            android:textColor="@color/redAlert"
            android:textAllCaps="false"
            android:background="@drawable/background_rounded_white"
            android:layout_marginVertical="10dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>